--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 
 </head>
 <body class="font-inter">
+    <!-- header part start -->
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/logo.png" alt="">
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
+
+            </ul>
+
+            <button class="subscribe-btn">
+                Subscribe →
+            </button>
+
+            <div class="hamburger">
+                ☰
+            </div>
+
+        </nav>
+
+    </header>
+    <!-- header part end -->
+
+    
     
 </body>
 </html>
