hero part almost finished

--- a/index.html
+++ b/index.html
@@ -31,13 +31,44 @@
             </button>
 
             <div class="hamburger">
-                ☰
+                <img src="assets/hamburger-menu.png" alt="">
             </div>
 
         </nav>
 
     </header>
     <!-- header part end -->
+
+    <!-- hero section start -->
+     <section class="hero">
+
+        <div class="hero-circle">
+            <span class="badge">NEW</span>
+            <img src="assets/microphone.png" alt="Microphone">
+
+        </div>
+
+        <div class="hero-content">
+            <h1>TechWave</h1>
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+        </div>
+
+        <div class="hero-buttons">
+
+            <button class="spotify-btn">
+                <img src="assets/spotify.png" alt="">
+                Listen on Spotify
+            </button>
+
+            <button class="youtube-btn">
+                <img src="assets/message.png" alt="">
+                Subscribe
+            </button>
+
+        </div>
+
+     </section>
+     <!-- hero section end -->
 
     
     
