update in leatest section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,73 @@
 
       <!-- choose tech wave section -->
        <section class="techwave">
+  <h2 class="section-title">Why Choose TechWave</h2>
+
+  <div class="feature-grid">
+
+    <!-- Premium Audio Quality -->
+    <div class="feature-card audio">
+      <div class="icon-box">
+        <img src="assets/headphone.png" alt="audio">
+      </div>
+      <h3>Premium Audio Quality</h3>
+      <p>
+        Experience crystal-clear sound with professional-grade recording
+        equipment and expert audio engineering.
+      </p>
+    </div>
+
+    <!-- Mobile Friendly -->
+    <div class="feature-card mobile">
+      <div class="icon-box">
+        <img src="assets/device.png" alt="mobile">
+      </div>
+      <h3>Mobile Friendly</h3>
+      <p>
+        Listen on the go with seamless mobile experience and offline downloads.
+      </p>
+    </div>
+
+    <!-- Global Community -->
+    <div class="feature-card global">
+      <div class="icon-box">
+        <img src="assets/location.png" alt="global">
+      </div>
+      <h3>Global Community</h3>
+      <p>
+        Connect with tech enthusiasts from over 120 countries worldwide.
+      </p>
+    </div>
+
+    <!-- Exclusive Interviews -->
+    <div class="feature-card interview">
+      <div class="icon-box">
+        <img src="assets/Icon (Stroke).png" alt="interview">
+      </div>
+      <h3>Exclusive Interviews</h3>
+      <p>
+        Get access to industry leaders, founders, and tech visionaries.
+      </p>
+    </div>
+
+    <!-- Rich Resources -->
+    <div class="feature-card resource">
+      <div class="icon-box">
+        <img src="assets/resource.png" alt="resources">
+      </div>
+      <h3>Rich Resources</h3>
+      <p>
+        Access show notes, transcripts, and learning materials for every episode.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+       <!-- <section class="techwave">
         <h2 class="section-title">Why Choose TechWave</h2>
         <div class="feature-grid">
             <div class="feature-card large">
@@ -171,7 +238,9 @@
 
         </div>
 
-       </section>
+       </section> -->
+
+
 
 
 
