Featured Episodes done

--- a/index.html
+++ b/index.html
@@ -181,64 +181,64 @@
 </section>
 
 
+<!-- Featured Episodes Start  -->
+<section class="featured">
+    <h2>Featured Episodes</h2>
 
+    <div class="card-row">
 
-       <!-- <section class="techwave">
-        <h2 class="section-title">Why Choose TechWave</h2>
-        <div class="feature-grid">
-            <div class="feature-card large">
-                <div class="icon-box">
-                    <img src="assets/headphone.png" alt="audio">
-
-                </div>
-                <h3>Premium Audio Quality</h3>
-                <p>Experience crystal-clear sound with professional-grade recording
-                equipment and expert audio engineering.</p>
-
-            </div>
-
-            <div class="feature-card">
-                <div class="icon-box">
-                    <img src="assets/device.png" alt="mobile">
-
-                </div>
-                <h3>Mobile Friendly</h3>
-                <p>Listen on the go with seamless mobile experience and offline downloads.</p>
-
-            </div>
-
-            <div class="feature-card">
-                <div class="icon-box">
-                    <img src="assets/location.png" alt="global">
-
-                </div>
-                <h3>Global Community</h3>
-                <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-
-            </div>
-            <div class="feature-card">
-                <div class="icon-box">
-                    <img src="assets/Icon (Stroke).png" alt="interview">
-
-                </div>
-                <h3>Exclusive Interviews</h3>
-                <p>Get access to industry leaders, founders, and tech visionaries.</p>
-
-            </div>
-            <div class="feature-card">
-                <div class="icon-box">
-                    <img src="assets/resource.png" alt="resources">
-
-                </div>
-                <h3>Rich Resources</h3>
-                <p>Access show notes, transcripts, and learning materials for every episode.</p>
-
-            </div>
-
-
+      <!-- Video 1 -->
+      <div class="card">
+        <div class="video-box">
+          <iframe
+            src="https://www.youtube.com/embed/yN1ukW17Qg0"
+            allowfullscreen>
+          </iframe>
         </div>
+        <h3>The Future of AI in Everyday Life</h3>
+        <p>
+          Exploring how artificial intelligence is transforming our daily
+          routines and what to expect in the next decade.
+        </p>
+        <span class="time">42 min</span>
+      </div>
 
-       </section> -->
+      <!-- Video 2 -->
+      <div class="card">
+        <div class="video-box">
+          <iframe
+            src="https://www.youtube.com/embed/TvJT_t5rYuw"
+            allowfullscreen>
+          </iframe>
+        </div>
+        <h3>Creative Coding & Inspiration</h3>
+        <p>
+          Creative coding, design thinking, and modern development ideas.
+        </p>
+        <span class="time">35 min</span>
+      </div>
+
+      <!-- Video 3 -->
+      <div class="card">
+        <div class="video-box">
+          <iframe
+            src="https://www.youtube.com/embed/HWjrhjuTqsU"
+            allowfullscreen>
+          </iframe>
+        </div>
+        <h3>Technology & Productivity</h3>
+        <p>
+          How technology tools can boost productivity and workflow.
+        </p>
+        <span class="time">51 min</span>
+      </div>
+
+    </div>
+  </section>
+
+
+
+    
 
 
 
