--- a/index.html
+++ b/index.html
@@ -270,8 +270,52 @@
     </div>
 
   </div>
-</section>
+     </section>
 <!-- meet host section  end -->
+
+<!-- Footer section start -->
+
+<footer class="newtechwave">
+  <div class="newtechwave-overlay"></div>
+
+  <div class="newtechwave-content">
+    <!-- Logo / Title -->
+    <h1 class="newtechwave-logo">
+      Tech<span>Wave</span>
+    </h1>
+
+    <!-- Social / Platform Icons -->
+    <div class="newtechwave-icons">
+      <a href="#">
+        <img src="assets/spotify.png" alt="Spotify">
+        <span>Spotify</span>
+      </a>
+
+      <a href="#">
+        <img src="assets/apple-podcast.png" alt="Apple Podcasts">
+        <span>Apple Podcasts</span>
+      </a>
+
+      <a href="#">
+        <img src="assets/youtube-podcast.png" alt="YouTube">
+        <span>YouTube</span>
+      </a>
+
+      <a href="#">
+        <img src="assets/twitter.png" alt="Twitter">
+        <span>Twitter</span>
+      </a>
+    </div>
+    <br>
+
+    <!-- Copyright -->
+    <p class="newtechwave-copyright">
+      © 2026 TechWave Podcast. All rights reserved.
+    </p>
+  </div>
+</footer>
+
+
 
 
       
